@@ -2,8 +2,9 @@
 
 	* src/stm8/gen.h,
 	  src/stm8/gen.c,
-	  src/stm8/peep.c:
-	  Infrastructure for handling offsets from symbols in rematerialization (part of RFE #446).
+	  src/stm8/peep.c,
+	  src/stm8/ralloc.c:
+	  Support offsets from symbols in rematerialization (RFE #446).
 
 2018-10-26 Philipp Klaus Krause <pkk AT spth.de>
 
